Various test fixes (#379)